Fix wrong position dropdown menu on top.

--- a/mk_ui/src/app/views/layout/layout.component.css
+++ b/mk_ui/src/app/views/layout/layout.component.css
@@ -21,3 +21,8 @@
     float: right;
     display: block !important;
 }
+
+.my-dropdown-left {
+    left: auto;
+    right: 0;
+}
